# fastapi_pipeline

./: Makefile  pyproject.toml
fastapi_pipeline/: app.py
