[tool.poetry]
name = "fastapi_pipeline"
version = "0.1.0"
description = ""
authors = ["Kyunghwan kim <khsyee@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100